MGS-1387 BUGFIX adjust spacing at top of APS publication content area

--- a/resources/scss/components/_component.aps-publication.scss
+++ b/resources/scss/components/_component.aps-publication.scss
@@ -14,7 +14,7 @@
   }
 
   @include media-query(tablet) {
-    padding-top: 56px;
+    padding-top: 35px;
   }
 }
 
